# treeedb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rustc-flags  shell.nix
.github/workflows/: ci.yml  release.yml
crates/treeedb/: Cargo.toml
crates/treeedb-bash/: Cargo.toml
crates/treeedb-bash/src/: main.rs
crates/treeedb-c/: Cargo.toml
crates/treeedb-cpp/: Cargo.toml
crates/treeedb-crystal/: Cargo.toml
crates/treeedb-crystal/src/: main.rs
crates/treeedb-csharp/: Cargo.toml
crates/treeedb-csharp/src/: main.rs
crates/treeedb-go/: Cargo.toml
crates/treeedb-java/: Cargo.toml
crates/treeedb-java/src/: main.rs
crates/treeedb-javascript/: Cargo.toml
crates/treeedb-javascript/src/: main.rs
crates/treeedb-perl/: Cargo.toml
crates/treeedb-perl/src/: main.rs
crates/treeedb-php/: Cargo.toml
crates/treeedb-python/: Cargo.toml
crates/treeedb-python/src/: main.rs
crates/treeedb-ruby/: Cargo.toml
crates/treeedb-rust/: Cargo.toml
crates/treeedb-rust/src/: main.rs
crates/treeedb-souffle/: Cargo.toml
crates/treeedb-souffle/src/: main.rs
crates/treeedb-swift/: Cargo.toml
crates/treeedb-swift/src/: main.rs
crates/treeedb/src/: consumer.rs  lib.rs  wide.rs
crates/treeedbgen/: Cargo.toml
crates/treeedbgen-souffle/: Cargo.toml
crates/treeedbgen-souffle-bash/: Cargo.toml
crates/treeedbgen-souffle-bash/tests/bash/: hello-world.sh
crates/treeedbgen-souffle-c/: Cargo.toml
crates/treeedbgen-souffle-c/tests/: main.rs
crates/treeedbgen-souffle-c/tests/c/: hello-world.c
crates/treeedbgen-souffle-cpp/: Cargo.toml
crates/treeedbgen-souffle-cpp/tests/: main.rs
crates/treeedbgen-souffle-crystal/: Cargo.toml
crates/treeedbgen-souffle-csharp/: Cargo.toml
crates/treeedbgen-souffle-csharp/tests/: main.rs
crates/treeedbgen-souffle-go/: Cargo.toml
crates/treeedbgen-souffle-go/src/: main.rs
crates/treeedbgen-souffle-go/tests/: main.rs
crates/treeedbgen-souffle-java/: Cargo.toml
crates/treeedbgen-souffle-javascript/: Cargo.toml
crates/treeedbgen-souffle-javascript/src/: main.rs
crates/treeedbgen-souffle-javascript/tests/: main.rs
crates/treeedbgen-souffle-perl/: Cargo.toml
crates/treeedbgen-souffle-perl/tests/: main.rs
crates/treeedbgen-souffle-php/: Cargo.toml
crates/treeedbgen-souffle-php/src/: main.rs
crates/treeedbgen-souffle-python/: Cargo.toml
crates/treeedbgen-souffle-python/tests/: main.rs
crates/treeedbgen-souffle-ruby/: Cargo.toml
crates/treeedbgen-souffle-ruby/tests/: main.rs
crates/treeedbgen-souffle-rust/: Cargo.toml
crates/treeedbgen-souffle-rust/src/: main.rs
crates/treeedbgen-souffle-souffle/: Cargo.toml
crates/treeedbgen-souffle-souffle/src/: main.rs
crates/treeedbgen-souffle-souffle/tests/: main.rs
crates/treeedbgen-souffle-swift/: Cargo.toml
crates/treeedbgen-souffle-swift/tests/: main.rs
crates/treeedbgen-souffle/src/: gen.rs  lib.rs
crates/treeedbgen/src/: lib.rs
examples/java/: .gitignore  Main.java  const-binop.dl
scripts/: add-language.sh  publish.sh
treeedb/: Cargo.toml
treeedb-bash/: Cargo.toml
treeedb-c/: Cargo.toml
treeedb-c/src/: main.rs
treeedb-cpp/: Cargo.toml
treeedb-cpp/src/: main.rs
treeedb-crystal/: Cargo.toml
treeedb-crystal/src/: main.rs
treeedb-csharp/: Cargo.toml
treeedb-csharp/src/: main.rs
treeedb-go/: Cargo.toml
treeedb-go/src/: main.rs
treeedb-java/: Cargo.toml
treeedb-java/src/: cli.rs  main.rs
treeedb-javascript/: Cargo.toml
treeedb-javascript/src/: main.rs
treeedb-ocaml/: Cargo.toml
treeedb-ocaml/src/: main.rs
treeedb-perl/: Cargo.toml
treeedb-perl/src/: main.rs
treeedb-php/: Cargo.toml
treeedb-php/src/: main.rs
treeedb-python/: Cargo.toml
treeedb-python/src/: main.rs
treeedb-ruby/: Cargo.toml
treeedb-ruby/src/: main.rs
treeedb-rust/: Cargo.toml
treeedb-rust/src/: main.rs
treeedb-souffle/: Cargo.toml
treeedb-souffle/src/: main.rs
treeedb-swift/: Cargo.toml
treeedb-swift/src/: main.rs
treeedb/src/: cli.rs  consumer.rs  count.rs  lib.rs  narrow.rs  wide.rs
treeedbgen/: Cargo.toml
treeedbgen-souffle/: Cargo.toml
treeedbgen-souffle-bash/: Cargo.toml  child.csv  field.csv  node.csv
treeedbgen-souffle-bash/src/: main.rs
treeedbgen-souffle-bash/tests/: main.rs
treeedbgen-souffle-c/: Cargo.toml
treeedbgen-souffle-c/src/: main.rs
treeedbgen-souffle-c/tests/: main.rs
treeedbgen-souffle-cpp/: Cargo.toml
treeedbgen-souffle-cpp/src/: main.rs
treeedbgen-souffle-cpp/tests/: main.rs
treeedbgen-souffle-crystal/: Cargo.toml
treeedbgen-souffle-crystal/src/: main.rs
treeedbgen-souffle-crystal/tests/: main.rs
treeedbgen-souffle-csharp/: Cargo.toml
treeedbgen-souffle-csharp/src/: main.rs
treeedbgen-souffle-csharp/tests/: main.rs
treeedbgen-souffle-go/: Cargo.toml
treeedbgen-souffle-go/tests/: main.rs
treeedbgen-souffle-java/: Cargo.toml
treeedbgen-souffle-java/src/: cli.rs  main.rs
treeedbgen-souffle-java/tests/: main.rs
treeedbgen-souffle-java/tests/java/: HelloWorld.java
treeedbgen-souffle-javascript/: Cargo.toml
treeedbgen-souffle-javascript/tests/: main.rs
treeedbgen-souffle-ocaml/: Cargo.toml
treeedbgen-souffle-ocaml/src/: main.rs
treeedbgen-souffle-ocaml/tests/: main.rs
treeedbgen-souffle-perl/: Cargo.toml
treeedbgen-souffle-perl/src/: main.rs
treeedbgen-souffle-perl/tests/: main.rs
treeedbgen-souffle-php/: Cargo.toml
treeedbgen-souffle-php/src/: main.rs
treeedbgen-souffle-php/tests/: main.rs
treeedbgen-souffle-python/: Cargo.toml
treeedbgen-souffle-python/src/: main.rs
treeedbgen-souffle-python/tests/: main.rs
treeedbgen-souffle-ruby/: Cargo.toml
treeedbgen-souffle-ruby/src/: main.rs
treeedbgen-souffle-ruby/tests/: main.rs
treeedbgen-souffle-rust/: Cargo.toml
treeedbgen-souffle-rust/tests/: main.rs
treeedbgen-souffle-souffle/: Cargo.toml
treeedbgen-souffle-souffle/tests/: main.rs
treeedbgen-souffle-swift/: Cargo.toml
treeedbgen-souffle-swift/src/: main.rs
treeedbgen-souffle-swift/tests/: main.rs
treeedbgen-souffle/src/: cli.rs  gen.rs  lib.rs
treeedbgen/src/: lib.rs
(+3 files in other folders)
