[workspace]
resolver = "2"

members = [
    "treeedb",
    "treeedb-bash",
    "treeedb-c",
    "treeedb-cpp",
    "treeedb-crystal",
    "treeedb-csharp",
    "treeedb-go",
    "treeedb-java",
    "treeedb-javascript",
    "treeedb-rust",
    "treeedb-perl",
    "treeedb-php",
    "treeedb-python",
    "treeedb-ruby",
    "treeedb-rust",
    "treeedb-souffle",
    "treeedb-swift",
    "treeedbgen",
    "treeedbgen-souffle",
    "treeedbgen-souffle-bash",
    "treeedbgen-souffle-c",
    "treeedbgen-souffle-cpp",
    "treeedbgen-souffle-crystal",
    "treeedbgen-souffle-csharp",
    "treeedbgen-souffle-go",
    "treeedbgen-souffle-java",
    "treeedbgen-souffle-javascript",
    "treeedbgen-souffle-perl",
    "treeedbgen-souffle-php",
    "treeedbgen-souffle-python",
    "treeedbgen-souffle-ruby",
    "treeedbgen-souffle-rust",
    "treeedbgen-souffle-souffle",
    "treeedbgen-souffle-swift",
]

[profile.release]
lto = "thin"
