[package]
name = "treeedb-bash"
version = "0.1.0"
edition = "2021"
description = "Generate Datalog facts from Bash scripts"
keywords = ["datalog", "Bash", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0", path = "../treeedb", features = ["cli"] }
tree-sitter-bash = { version = "0.25" }
