[package]
name = "treeedb-csharp"
version = "0.1.0"
edition = "2021"
description = "Generate Datalog facts from C# source code"
keywords = ["datalog", "csharp", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0", path = "../treeedb", features = ["cli"] }
tree-sitter-c-sharp = { version = "0.23", git = "https://github.com/tree-sitter/tree-sitter-c-sharp" }
