[package]
name = "treeedb-csharp"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Generate Datalog facts from C# source code"
keywords = ["datalog", "csharp", "parsing", "souffle"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0", path = "../treeedb", features = ["cli"] }
tree-sitter-c-sharp = { version = "0.23", git = "https://github.com/tree-sitter/tree-sitter-c-sharp" }
