[package]
name = "treeedb-perl"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Generate Datalog facts from Perl source code"
keywords = ["datalog", "perl", "parsing", "souffle"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0", path = "../treeedb", features = ["cli"] }
tree-sitter-perl = { git = "https://github.com/tree-sitter-perl/tree-sitter-perl", branch = "release" }

