[package]
name = "treeedb-python"
version = "0.1.0"
edition = "2021"
description = "Generate Datalog facts from Python source code"
keywords = ["datalog", "python", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0", path = "../treeedb", features = ["cli"] }
tree-sitter-python = { version = "0.20" }
