[package]
name = "treeedb-rust"
version = "0.1.0-rc.1"
edition = "2021"
description = "Generate Datalog facts from Rust source code"
keywords = ["datalog", "rust", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0-rc.1", path = "../treeedb", features = ["cli"] }
tree-sitter-rust = { version = "0.20" }
