[package]
name = "treeedb-souffle"
version = "0.1.0"
edition = "2021"
description = "Generate Datalog facts from Soufflé source code"
keywords = ["datalog", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0", path = "../treeedb", features = ["cli"] }
tree-sitter-souffle = { version = "0.4.0" }

# TODO(lb): Enable when this hits stable
# https://doc.rust-lang.org/cargo/reference/unstable.html#artifact-dependencies
# [dev-dependencies]
# cargo-deb = { version = "1", artifact = "bin" }

# TODO(lb):
# [package.metadata.deb]
# assets = [
#     ["../README.md", "usr/share/doc/treeedb-java/README.md", "644"],
#     ["target/x86_64-unknown-linux-musl/release/treedb-java", "usr/bin/", "755"],
# ]
