[package]
name = "treeedb-souffle"
version = "0.1.0-rc.3"
edition = "2021"
description = "Generate Datalog facts from Soufflé source code"
keywords = ["datalog", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0-rc.3", path = "../treeedb", features = ["cli"] }
tree-sitter-souffle = { version = "0.4.0" }
