[package]
name = "treeedb-swift"
version = "0.1.0-rc.5"
edition = "2021"
description = "Generate Datalog facts from Swift source code"
keywords = ["datalog", "swift", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1.0"
treeedb = { version = "0.1.0-rc.5", path = "../treeedb", features = ["cli"] }
tree-sitter-swift = { version = "0.3.4" }
