[package]
name = "treeedb"
version = "0.1.0-rc.5"
edition = "2021"
description = "Generate Datalog facts from tree-sitter parse trees"
keywords = ["datalog", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
csv = "1"
tree-sitter = "0.20"

[features]
default = []
cli = ["dep:anyhow", "dep:clap"]