[package]
name = "treeedbgen-souffle-c"
version = "0.1.0"
edition = "2021"
description = "Generate Soufflé types and relations from the C tree-sitter grammar"
keywords = ["datalog", "c", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[lints]
workspace = true

[dependencies]
anyhow = "1"
treeedbgen-souffle = { version = "0.1.0", path = "../treeedbgen-souffle", features = ["cli"] }
tree-sitter-c = { version = "0.24" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
