[package]
name = "treeedbgen-souffle-javascript"
version = "0.1.0"
edition = "2021"
description = "Generate Soufflé types and relations from the JavaScript tree-sitter grammar"
keywords = ["datalog", "javascript", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[lints]
workspace = true

[dependencies]
anyhow = "1"
treeedbgen-souffle = { version = "0.1.0", path = "../treeedbgen-souffle", features = ["cli"] }
tree-sitter-javascript = "0.25"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
