[package]
name = "treeedbgen-souffle-ocaml"
version = "0.1.0"
edition = "2021"
description = "Generate Soufflé types and relations from the OCaml tree-sitter grammar"
keywords = ["datalog", "ocaml", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1"
treeedbgen-souffle = { version = "0.1.0", path = "../treeedbgen-souffle", features = ["cli"] }
tree-sitter-ocaml = { version = "0.20", git = "https://github.com/tree-sitter/tree-sitter-ocaml" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3"