[package]
name = "treeedbgen-souffle-perl"
version = "0.1.0"
edition = "2021"
description = "Generate Soufflé types and relations from the Perl tree-sitter grammar"
keywords = ["datalog", "perl", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[lints]
workspace = true

[dependencies]
anyhow = "1"
treeedbgen-souffle = { version = "0.1.0", path = "../treeedbgen-souffle", features = ["cli"] }
tree-sitter-perl = { git = "https://github.com/tree-sitter-perl/tree-sitter-perl", branch = "release" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
