[package]
name = "treeedbgen-souffle-souffle"
version = "0.1.0-rc.2"
edition = "2021"
description = "Generate Soufflé types and relations from the Soufflé tree-sitter grammar"
keywords = ["datalog", "java", "parsing", "souffle"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/langston-barrett/treeedb"
repository = "https://github.com/langston-barrett/treeedb"

[dependencies]
anyhow = "1"
treeedbgen-souffle = { version = "0.1.0-rc.2", path = "../treeedbgen-souffle", features = ["cli"] }
tree-sitter-souffle = { version = "0.4.0" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3"